--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -30,19 +30,82 @@ Theme Styles
     background: #8DC63F; /*Green*/
   }
 /***************************
-****************************
 Base Styles
-****************************
 ***************************/
+body {
+  color: #093d3b;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+}
 
+h1, h2, h3 {
+  font-weight: bold;
+}
 
+a {
+  color: #8dc63f;
+  font-weight: bold;
+}
+a:hover {
+  text-decoration: underline;
+}
 /***************************
-****************************
 Layout Styles
-****************************
 ***************************/
+.container {
+  padding-right: 0.938rem;
+  padding-left: 0.938rem;
+  margin: 0 auto;
+  max-width: 73.125rem;
+}
+/* Row */
+.row {
+  margin-right: -0.938rem;
+  margin-left: -0.938rem;;
+}
 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* Column */
+[class*='col-'] {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
+/* Small Devices and Above */
+/* Media Query excludes extra small devices and includes small and above */
+@media (min-width: 48em) {
+  [class*='col-'] {
+      float: left;
+  }
+  /* Column Third */
+  .col-1-3 {
+      width: 33.3333%;
+  }
+  /* Column Two Thirds */
+  .col-2-3 {
+      width: 66.6666%;
+  }
+  .col-1-2{
+    width: 50%;
+  }
+}
+@media (min-width: 48em) {
+  .pull-right-sm {
+    float:right;
+}
+}
+/* Extra small devices */
+@media only screen and (max-width : 47.9375em) {
+  .remove-gutter-xs {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+}
 /***************************
 ****************************
 Module Styles
