--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -125,18 +125,121 @@ Module Styles
 
 /* Button Module  */
 .btn { 
-   padding: .5em 1em; 
-   text-decoration: none; 
-   border: 0.2rem gray solid; 
-   display: inline-block; /*helps anchors and other inline elements  */
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-image: none;
+  border: 1px solid transparent;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 12px 30px;
+  font-size: 1.313em;
+  font-weight: bold;
+  border-radius: 4px;
+  transition: all 0.3s ease 0s;
 } 
 
- /* Button Sub-Module  */
+ /* Button Primary  */
+ .btn-primary {
+  background: #efcd78;
+  border-color: #efcd78;
+  color: white;
+ }
 
-.btn—content {
+ .btn-primary:hover {
+  background: none;
+  border-color: white;
+  text-decoration: none;
+ }
 
- background: blue;
-
- color: white;
-
+ /*Header Modules*/
+.header-primary {
+  background: #9c3b0e;
+  text-align: center;
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
+
+
+/*Logo Modules*/
+.logo {
+  overflow: hidden;
+  display: inline-block;
+}
+
+.logo-primary {
+  width: 64px;
+  height: 64px;
+}
+
+
+.logo-primary img {
+  height: 100%;
+}
+
+/*Navigation Modules*/
+.nav > ul {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+.nav-primary {
+  margin-top: 35px;
+}
+
+.btn-nav {
+  color: white;
+}
+
+/*Hero Modules*/
+.hero {
+  text-align: center;
+}
+.hero-primary {
+  background-color: #594a42;
+  color: white;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.hero-primary.bg-image > img {
+  opacity: 0.55;
+}
+.hero-body {
+  position: relative;
+}
+.hero-title {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  font-size: 2.625em;
+}
+.hero-subtitle {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  font-size: 1.500em;
+  font-weight: normal;
+}
+
+.hero-subtitle + button {
+  margin-top: 25px;
+}
+
+/*Background Modules*/
+.bg-image  {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.bg-image > img {
+  position: absolute;
+  top: -9999px;
+  bottom: -9999px;
+  left: -9999px;
+  right: -9999px;
+  margin: auto;
+  min-width: 100%;
+}
+
