--- a/src/routes/Navbar/Css/navstyle.css
+++ b/src/routes/Navbar/Css/navstyle.css
@@ -3,11 +3,12 @@
   list-style: none;
   padding: 0px;
   margin: 0px;
+  z-index: 2;
 }
 
 .nav-primary {
   margin-top: 35px;
-  display: none;
+  display: block;
 }
 
 .btn-nav {
