--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -9,29 +9,31 @@
 /***************************
 Reset Styles
 ***************************/
-@import 'normalize.css';
+@import "normalize.css";
 /* Change all elements to use border-box */
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 /***************************
 Theme Styles
 ***************************/
 .background-primary {
-    background: #F7941E; /*Orange*/
-  }
-  .background-secondary {
-    background: #00AEEF; /*Blue*/
-  }
-  .background-tertiary {
-    background: #8DC63F; /*Green*/
-  }
-  .background-quinary{
-    background:#e7e1d7;
-  }
+  background: #f7941e; /*Orange*/
+}
+.background-secondary {
+  background: #00aeef; /*Blue*/
+}
+.background-tertiary {
+  background: #8dc63f; /*Green*/
+}
+.background-quinary {
+  background: #e7e1d7;
+}
 /***************************
 Base Styles
 ***************************/
@@ -41,7 +43,9 @@ body {
   font-weight: normal;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: bold;
 }
 
@@ -53,9 +57,7 @@ a:hover {
   text-decoration: underline;
 }
 
-
-
-.center{
+.center {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -72,7 +74,7 @@ Layout Styles
 /* Row */
 .row {
   margin-right: -0.938rem;
-  margin-left: -0.938rem;;
+  margin-left: -0.938rem;
 }
 
 .row:after {
@@ -81,7 +83,7 @@ Layout Styles
   clear: both;
 }
 /* Column */
-[class*='col-'] {
+[class*="col-"] {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
@@ -90,72 +92,87 @@ Layout Styles
 /* Small Devices and Above */
 /* Media Query excludes extra small devices and includes small and above */
 @media (min-width: 48em) {
-  [class*='col-'] {
-      float: left;
+  [class*="col-"] {
+    float: left;
   }
   /* Column Third */
   .col-1-3 {
-      width: 33.3333%;
+    width: 33.3333%;
   }
   /* Column Two Thirds */
   .col-2-3 {
-      width: 66.6666%;
+    width: 66.6666%;
   }
-  .col-1-2{
+  .col-1-2 {
     width: 50%;
   }
-  .col-1-4{
-    width:25%;
+  .col-1-4 {
+    width: 25%;
   }
-  .col-3-4{
+  .col-3-4 {
     width: 75%;
   }
-  .col-smart{
+  .col-smart {
     width: 17%;
   }
   /* Max with image */
-  .img{
-    width: 100%;   
+  .img {
+    width: 100%;
     height: auto;
     object-fit: cover;
   }
 }
-  @media (min-width: 48em) {
-    .pull-right-sm {
-      float:right;
+@media (min-width: 48em) {
+  .pull-right-sm {
+    float: right;
   }
-   .btn-toggle-menu{
+  .btn-toggle-menu {
     display: none;
-  } 
-   .nav-primary{
+  }
+  .nav-primary {
     margin: top 28px;
     display: block;
-   }
+  }
 }
 
 /* Extra small devices */
-@media only screen and (max-width : 47.9375em) {
+@media only screen and (max-width: 47.9375em) {
   .remove-gutter-xs {
     padding-left: 0px;
     padding-right: 0px;
-}
-  .img{
-    width: 100%;   
+  }
+  .img {
+    width: 100%;
     height: auto;
     object-fit: cover;
   }
-  .btn{
+  .btn {
     display: inline-block;
   }
-}
+  .wrapper {
+    min-height: 100%;
+    padding-bottom: 100px;
+    margin: 0 auto;
+  }
+  .wrapper h1,
+  p {
+    text-align: center;
+  }
 
+  .wrapper div .row .card-container div div .card-img {
+    width: 100%;
+  }
+  /* .wrapper .card-img{
+    width: 100%;
+  } */
+}
 
 /***************************
 Module Styles
 ***************************/
 
 /* Button Module  */
-.btn { 
+.btn {
   /* display: inline-block; */
   text-align: center;
   white-space: nowrap;
@@ -169,20 +186,20 @@ Module Styles
   font-weight: bold;
   border-radius: 4px;
   transition: all 0.3s ease 0s;
-} 
+}
 
- /* Button Primary  */
- .btn-primary {
+/* Button Primary  */
+.btn-primary {
   background: #efcd78;
   border-color: #efcd78;
   color: white;
- }
+}
 
- .btn-primary:hover {
+.btn-primary:hover {
   background: none;
   border-color: white;
   text-decoration: none;
- }
+}
 
 /*Hero Modules*/
 .hero {
@@ -209,7 +226,7 @@ Module Styles
 .hero-subtitle {
   margin-top: 25px;
   margin-bottom: 25px;
-  font-size: 1.500em;
+  font-size: 1.5em;
   font-weight: normal;
 }
 
@@ -218,7 +235,7 @@ Module Styles
 }
 
 /*Background Modules*/
-.bg-image  {
+.bg-image {
   width: 100%;
   overflow: hidden;
   position: relative;
@@ -236,19 +253,34 @@ Module Styles
 
 /*Media Object Module*/
 .media {
-
 }
 
-.media, .media-body {
-  overflow:hidden;
+.media,
+.media-body {
+  overflow: hidden;
 }
 
 .media-item {
-  float:left;
+  float: left;
   margin-right: 10px;
 }
 
 .media-item i {
   color: #594a42;
   font-size: 5em;
+}
+
+/* .styleImage {
+  width: 100%;
+  height: "auto";
+  object-fit: "cover";
+  border-radius: "60%";
+} */
+
+.styleCard {
+  background-color: #d5cdc9;
+  padding: 0.7rem;
+  border-radius: 1rem;
+  box-shadow: 0.5rem 0.5rem 1rem #e6c6ad;
+  line-height: 1.5;
 }
