--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -133,6 +133,16 @@ Layout Styles
     margin: top 28px;
     display: block;
   }
+  .centerSmall {
+    text-align: center;
+    background-color: #d5cdc9;
+    margin: 1rem;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 1rem;
+    padding: 0.5rem;
+  }
 }
 
 /* Extra small devices */
@@ -166,18 +176,15 @@ Layout Styles
   .wrapper div .row .card-container div div .card-img {
     width: 100%;
   }
-  /* .wrapper .card-img{
-    width: 100%;
-  } */
-  .formContainer {
-    background-color: antiquewhite;
-    margin-top: 2rem;
-    display: block;
-    width: 100%;
-    margin: 0 auto;
-    padding: rem;
+  .centerSmall {
+    text-align: center;
+    background-color: #d5cdc9;
+    margin: 1rem;
+    width: 20%;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 1rem;
-    box-shadow: 1rem 1rem 2rem lightgrey;
+    padding: 0.5rem;
   }
 }
 
