Update on the style

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -135,7 +135,7 @@ Layout Styles
   }
   .centerSmall {
     text-align: center;
-    background-color: #d5cdc9;
+    /* background-color: #d5cdc9; */
     margin: 1rem;
     width: 25%;
     margin-left: auto;
@@ -178,7 +178,7 @@ Layout Styles
   }
   .centerSmall {
     text-align: center;
-    background-color: #d5cdc9;
+    /* background-color: #d5cdc9; */
     margin: 1rem;
     width: 20%;
     margin-left: auto;
@@ -299,7 +299,7 @@ Module Styles
 } */
 
 .styleCard {
-  background-color: #d5cdc9;
+  /* background-color: #d5cdc9; */
   padding: 0.7rem;
   border-radius: 1rem;
   box-shadow: 0.5rem 0.5rem 1rem #e6c6ad;
