--- a/src/routes/Contact/style.css
+++ b/src/routes/Contact/style.css
@@ -3,7 +3,7 @@ form h1 {
 }
 
 .formContainer {
-  background-color: #d5cdc9;
+  /* background-color: #d5cdc9; */
   margin-top: 2rem;
   display: block;
   width: 70%;
