--- a/src/routes/Feature/style.css
+++ b/src/routes/Feature/style.css
@@ -1,5 +1,5 @@
 article blockquote {
-  background-color: #d5cdc9;
+  /* background-color: #d5cdc9; */
   padding: 0.7rem;
   border-radius: 1rem;
   box-shadow: 0.5rem 0.5rem 1rem #e6c6ad;
