Working on the form

--- a/src/routes/Feature/style.css
+++ b/src/routes/Feature/style.css
@@ -2,7 +2,7 @@ article blockquote {
   /* background-color: #d5cdc9; */
   padding: 0.7rem;
   border-radius: 1rem;
-  box-shadow: 0.5rem 0.5rem 1rem #e6c6ad;
+  box-shadow: 0.5rem 0.5rem 1rem lightgrey;
   line-height: 1.5;
 }
 
