--- a/src/routes/Contact/style.css
+++ b/src/routes/Contact/style.css
@@ -3,16 +3,40 @@ form h1 {
 }
 
 .formContainer {
-  /* background-color: #d5cdc9; */
   margin-top: 2rem;
-  display: block;
-  width: 70%;
-  margin: 0 auto;
   padding: 1rem;
   border-radius: 1rem;
   box-shadow: 1rem 1rem 2rem lightgrey;
 }
+.formContainer form {
+  display: block;
+  width: 50%;
+  margin: 4% auto;
+}
 
 .lightGreen {
   color: #16c48a;
+}
+.response {
+  font-size: "30px";
+  border-radius: "10px";
+  padding: "10px";
+  text-align: "center";
+}
+
+@media only screen and (max-width: 47.9375em) {
+  .formContainer {
+    margin-top: 2rem;
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: 1rem 1rem 2rem lightgrey;
+  }
+  .formContainer form {
+    display: block;
+    width: 100%;
+    margin: 4% auto;
+  }
 }
