--- a/src/routes/Contact/style.css
+++ b/src/routes/Contact/style.css
@@ -23,6 +23,11 @@ form h1 {
   padding: "10px";
   text-align: "center";
 }
+h3::after {
+  font-family: " impacts";
+  content: "\260F";
+  color: #4a413d;
+}
 
 @media only screen and (max-width: 47.9375em) {
   .formContainer {
